Hide species export link.  Fixes #1841

--- a/opentreemap/importer/templates/importer/partials/imports.html
+++ b/opentreemap/importer/templates/importer/partials/imports.html
@@ -52,16 +52,17 @@
 
           {% include 'importer/partials/import_tables.html' %}
 
-          <div class="row">
-            <div class="col-md-12">
-              <h2 class="top-pad-lg">Export</h2>
-              <hr>
-              <a href="{% url 'importer:export_all_species' instance_url_name=request.instance.url_name %}" class="btn btn-info">
-                Export All Species
-                <i class="icon-forward"></i>
-              </a>
-            </div>
-          </div>
+<!-- TODO: Uncomment when species exporting is completed -->
+<!--           <div class="row"> -->
+<!--             <div class="col&#45;md&#45;12"> -->
+<!--               <h2 class="top&#45;pad&#45;lg">Export</h2> -->
+<!--               <hr> -->
+<!--               <a href="{% url 'importer:export_all_species' instance_url_name=request.instance.url_name %}" class="btn btn&#45;info"> -->
+<!--                 Export All Species -->
+<!--                 <i class="icon&#45;forward"></i> -->
+<!--               </a> -->
+<!--             </div> -->
+<!--           </div> -->
 
         </div>
       </div>
