--- a/opentreemap/importer/templates/importer/partials/file_status.html
+++ b/opentreemap/importer/templates/importer/partials/file_status.html
@@ -2,50 +2,50 @@
 {% load i18n %}
 
 {% block main %}
-<div class="well">
-  <h4>There were errors in the file structure: </h4>
-
-  {% with errors=ie.errors_as_array %}
-    {% if errors %}
-      <ul class="no-bullet">
-        {% for error in errors %}
-          {% if error.data %}
-            <li>{{ error.msg }}:
-              <ul>
-                {% for item in error.data %}
-                  {% if item %}
-                    <li><b>{{ item }}</b></li>
-                  {% endif %}
-                {% endfor %}
-              </ul>
-            </li>
-          {% else %}
-            <li>{{ error.msg }}</li>
-          {% endif %}
-        {% endfor %}
-      </ul>
-    {% endif %}
-    {% if is_missing_field %}
-      <div>
-        {% trans "The CSV must contain all of the following columns:" %}
-        <ul>
-        {% for field in required_fields %}
-          <li>{{ field }}</li>
-        {% endfor %}
+<div class="col-md-12">
+  <div class="well">
+    <h4>There were errors in the file structure: </h4>
+    {% with errors=ie.errors_as_array %}
+      {% if errors %}
+        <ul class="no-bullet">
+          {% for error in errors %}
+            {% if error.data %}
+              <li>{{ error.msg }}:
+                <ul>
+                  {% for item in error.data %}
+                    {% if item %}
+                      <li><b>{{ item }}</b></li>
+                    {% endif %}
+                  {% endfor %}
+                </ul>
+              </li>
+            {% else %}
+              <li>{{ error.msg }}</li>
+            {% endif %}
+          {% endfor %}
         </ul>
-      </div>
-    {% endif %}
-    {% if has_unmatched_field %}
-      <div>
-        {% trans "The CSV may contain only the following columns:" %}
-        <ul>
-        {% for field in legal_fields %}
-          <li>{{ field }}</li>
-        {% endfor %}
-        </ul>
-      </div>
-    {% endif %}
-  {% endwith %}
+      {% endif %}
+      {% if is_missing_field %}
+        <div>
+          {% trans "The CSV must contain all of the following columns:" %}
+          <ul>
+          {% for field in required_fields %}
+            <li>{{ field }}</li>
+          {% endfor %}
+          </ul>
+        </div>
+      {% endif %}
+      {% if has_unmatched_field %}
+        <div>
+          {% trans "The CSV may contain only the following columns:" %}
+          <ul>
+          {% for field in legal_fields %}
+            <li>{{ field }}</li>
+          {% endfor %}
+          </ul>
+        </div>
+      {% endif %}
+    {% endwith %}
+  </div>
 </div>
 {% endblock main %}
-
