--- a/opentreemap/importer/templates/importer/partials/file_status.html
+++ b/opentreemap/importer/templates/importer/partials/file_status.html
@@ -4,7 +4,7 @@
 {% block main %}
 <div class="col-md-12">
   <div class="well">
-    <h4>There were errors in the file structure: </h4>
+    <h4>{% trans "There were errors in the file structure: " %} </h4>
     {% with errors=ie.errors_as_array %}
       {% if errors %}
         <ul class="no-bullet">
