--- a/opentreemap/importer/templates/importer/partials/import_table.html
+++ b/opentreemap/importer/templates/importer/partials/import_table.html
@@ -1,10 +1,11 @@
+{% load i18n %}
 <table class="table table-hover">
     <thead>
         <tr>
-            <th>Import Event</th>
-            <th>Status</th>
-            <th>Rows</th>
-            <th>View</th>
+            <th>{% trans "Import Event" %}</th>
+            <th>{% trans "Status" %}</th>
+            <th>{% trans "Rows" %}</th>
+            <th>{% trans "View" %}</th>
         </tr>
     </thead>
     <tbody>
