--- a/opentreemap/importer/templates/importer/partials/import_tables.html
+++ b/opentreemap/importer/templates/importer/partials/import_tables.html
@@ -1,11 +1,12 @@
+{% load i18n %}
 <div id="import-tables">
   <div class="row">
     <div class="col-md-12">
       <img src="/static/img/spinner.gif" class="spinner pull-right" style="display:none;">
-      <h2>Imports</h2>
+      <h2>{% trans "Imports" %}</h2>
       <hr>
 
-      <h4>Active Tree Imports</h4>
+      <h4>{% trans "Active Tree Imports" %}</h4>
       {% include 'importer/partials/import_table.html' with things=active_trees import_type="tree" %}
     </div>
   </div>
@@ -14,7 +15,7 @@
 
   <div class="row">
     <div class="col-md-12">
-      <h4>Finished Tree Imports</h4>
+      <h4>{% trans "Finished Tree Imports" %}</h4>
       {% include 'importer/partials/import_table.html' with things=finished_trees import_type="tree" %}
     </div>
   </div>
@@ -23,7 +24,7 @@
 
   <div class="row">
     <div class="col-md-12">
-      <h4>Active Species Imports</h4>
+      <h4>{% trans "Active Species Imports" %}</h4>
       {% include 'importer/partials/import_table.html' with things=active_species import_type="species" %}
     </div>
   </div>
@@ -32,7 +33,7 @@
 
   <div class="row">
     <div class="col-md-12">
-      <h4>Finished Species Imports</h4>
+      <h4>{% trans "Finished Species Imports" %}</h4>
       {% include 'importer/partials/import_table.html' with things=finished_species import_type="species" %}
     </div>
   </div>
