Added CSV Instructions

--- a/opentreemap/importer/templates/importer/partials/imports.html
+++ b/opentreemap/importer/templates/importer/partials/imports.html
@@ -33,6 +33,9 @@
                     {% endwith %}
                   </div>
                 </form>
+                <div class="instructions">
+                  <p>Need help formatting your CSV?  We have formatting <a href="#" target="_blank">instructions</a> and a <a href="#" target="_blank">template</a> to use.</p>
+                </div>
               </div>
             </div>
             <div class="col-md-6">
@@ -46,6 +49,9 @@
                     {% trans "File to Upload:" %} <input type="file" name="file">
                   </div><!-- /input-group -->
                 </form>
+                <div class="instructions">
+                  <p>Need help formatting your CSV?  We have formatting <a href="#" target="_blank">instructions</a> and a <a href="#" target="_blank">template</a> to use.</p>
+                </div>
               </div>
             </div>
           </div>
