--- a/opentreemap/importer/templates/importer/partials/file_status.html
+++ b/opentreemap/importer/templates/importer/partials/file_status.html
@@ -5,7 +5,7 @@
 <div class="col-md-12">
   <div class="well">
     <h4>{% trans "There were errors in the file structure: " %} </h4>
-    {% with errors=ie.errors_as_array %}
+    {% with errors=ie.errors_array_with_messages %}
       {% if errors %}
         <ul class="no-bullet">
           {% for error in errors %}
