Add links to importer guids and templates
Fixes #1795

--- a/opentreemap/importer/templates/importer/partials/imports.html
+++ b/opentreemap/importer/templates/importer/partials/imports.html
@@ -34,7 +34,10 @@
                   </div>
                 </form>
                 <div class="instructions">
-                  <p>Need help formatting your CSV?  We have formatting <a href="#" target="_blank">instructions</a> and a <a href="#" target="_blank">template</a> to use.</p>
+                  <p>Need help formatting your CSV?  We have formatting
+                     <a href="https://www.opentreemap.org/wp-content/uploads/2015/01/OpenTreeMap_Tree_Import_Guide.pdf" target="_blank">instructions</a>
+                     and a <a href="https://www.opentreemap.org/wp-content/uploads/2015/01/OpenTreeMap_Tree_Import_Template.csv" target="_blank">template</a> to use.
+                  </p>
                 </div>
               </div>
             </div>
@@ -50,7 +53,10 @@
                   </div><!-- /input-group -->
                 </form>
                 <div class="instructions">
-                  <p>Need help formatting your CSV?  We have formatting <a href="#" target="_blank">instructions</a> and a <a href="#" target="_blank">template</a> to use.</p>
+                  <p>Need help formatting your CSV?  We have formatting
+                     <a href="https://www.opentreemap.org/wp-content/uploads/2015/01/OpenTreeMap_Species_Import_Guide.pdf" target="_blank">instructions</a>
+                     and a <a href="https://www.opentreemap.org/wp-content/uploads/2015/01/OpenTreeMap_Species_Import_Template.csv" target="_blank">template</a> to use.
+                  </p>
                 </div>
               </div>
             </div>
