--- a/opentreemap/importer/templates/importer/partials/species_resolve_popover.html
+++ b/opentreemap/importer/templates/importer/partials/species_resolve_popover.html
@@ -13,8 +13,9 @@
 <input class="popover-correction species-resolver-typeahead"
        data-typeahead-url="{% url 'species_list_view' instance_url_name=request.instance.url_name %}"
        value="{{ field.custom_resolver.suggestion.display_name }}"/>
-<p style="font-size:1.1rem;line-height:1.4rem;">
-    {% trans 'Click "Save" to accept the suggested species, or click in the text box to select from the species list. Use the species import tool to add new species to your map.' %}</p>
+<p class="help_text">
+    {% trans 'Click "Save" to accept the suggested species, or click in the text box to select from the species list. Use the species import tool to add new species to your map.' %}
+</p>
 {% endblock content %}
 
 {% block extra_save_classes %}resolver-popover-accept{% endblock extra_save_classes %}
