--- a/opentreemap/treemap/css/sass/partials/pages/_importer.scss
+++ b/opentreemap/treemap/css/sass/partials/pages/_importer.scss
@@ -75,4 +75,11 @@
     list-style-type: none;
     padding-left: 0!important;
   }
+
+  .popover {
+    .help_text {
+      font-size:1.1rem;
+      line-height:1.4rem;
+    }
+  }
 }
