--- a/opentreemap/treemap/templates/treemap/partials/popover.html
+++ b/opentreemap/treemap/templates/treemap/partials/popover.html
@@ -21,6 +21,8 @@
            {% block extra_content_input_attributes %}
            {% endblock extra_content_input_attributes %}
            />
+    {% block help_text %}
+    {% endblock help_text %}
     {% endblock content %}
     <hr>
     <button class="btn btn-success popover-accept {% block extra_save_classes %}{% endblock %}"
