Don't spread out merge resolution choices (fixes #1912)

--- a/opentreemap/importer/templates/importer/partials/merge_species.html
+++ b/opentreemap/importer/templates/importer/partials/merge_species.html
@@ -3,7 +3,7 @@
 
 <tr class='js-merge-controls' style="display: none;">
     <td colspan="{{ panel.field_names|length }}">
-        <table class="table table-condensed">
+        <table class="table table-condensed" style="width:auto">
             <thead>
                 <tr>
                     <th>{% trans "Field" %}</th>
