Add social media sharing buttons (fixes #413)
* Facebook, Twitter, and Google+
* Show on plot detail and resource detail pages for public sites
* Add meta-tags so posts will get a sensible title/picture/description
* Include total ecobenefits in description if possible

--- a/opentreemap/treemap/templates/treemap/map_feature_detail.html
+++ b/opentreemap/treemap/templates/treemap/map_feature_detail.html
@@ -5,6 +5,13 @@
 {% load l10n %}
 
 {% block head_extra %}
+{# Facebook & Google+ scrape these properties for their share dialogs #}
+<meta property="og:url" content="{{ share.url }}" />
+<meta property="og:title" content="{{ share.title }}" />
+<meta property="og:description" content="{{ share.description }}" />
+<meta property="og:image" content="{{ share.image }}" />
+<meta property="og:type" content="article" />
+<meta property="og:site_name" content="{{ request.instance.name }}" />
 {% endblock head_extra %}
 
 {% block subhead_exports %}
@@ -60,7 +67,20 @@
 
     <div class="col-md-9">
       <div class="detail-header">
-        <button class="btn share hidden">Share</button>
+        {% if request.instance.is_public %}
+        <div class="js-container pull-right" style="display: none">
+          <a target="_blank" href="http://www.facebook.com/sharer/sharer.php?u={{ share.url }}">
+            <img src="/static/img/facebook_32.png">
+          </a>
+          <a target="_blank" href="http://twitter.com/share?url={{ share.url }}&text={{ share.title }}">
+            <img src="/static/img/twitter_32.png">
+          </a>
+          <a target="_blank" href="https://plus.google.com/share?url={{ share.url }}">
+            <img src="/static/img/googleplus_32.png">
+          </a>
+        </div>
+        <button class="btn share">Share</button>
+        {% endif %}
         <h2 class="common-name" id="map-feature-title">
           {{ title }}
           <a id="favorite-link"
@@ -263,7 +283,11 @@ var mapFeatureOptions = {
             y: {{ feature.geom.y }}
         }
     },
-    streetView: '#street-view'
+    streetView: '#street-view',
+    share: {
+        toggle: '.share',
+        container: '.js-container'
+    }
 };
 {% endlocalize %}
 </script>
