--- a/opentreemap/treemap/templates/treemap/user.html
+++ b/opentreemap/treemap/templates/treemap/user.html
@@ -83,6 +83,12 @@ active
                       </a>
                     </li>
                     <li>
+                      <a href="#favorites" data-toggle="tab">
+                        <span class="number">{{ favorites|length }}</span>
+                        {% blocktrans count n=favorites|length %}Favorite{% plural %}Favorites{% endblocktrans %}
+                      </a>
+                    </li>
+                    <li>
                       <a href="#edits" data-toggle="tab">
                         <span class="number">{{ total_edits }}</span>
                         {% blocktrans count n=total_edits %}Edit{% plural %}Edits{% endblocktrans %}
@@ -99,6 +105,16 @@ active
                         <a href="{% url 'map' instance_url_name=instance.url_name %}">{{ instance.name }}</a>
                       </div>
                     {% endfor %}
+                </div>
+                <div class="tab-pane" id="favorites">
+                    <h3>Favorites</h3>
+                    <ol class="favorites-list">
+                        {% for favorite in favorites %}
+                            <li>
+                                {% include 'treemap/partials/user_favorite.html' %}
+                            </li>
+                        {% endfor %}
+                    </ol>
                 </div>
                 <div class="tab-pane" id="edits">
                     <h3>{% trans "Recent Edits" %}</h3>
