--- a/opentreemap/treemap/css/sass/partials/pages/_profile.scss
+++ b/opentreemap/treemap/css/sass/partials/pages/_profile.scss
@@ -138,6 +138,16 @@
 #favorites {
     ol {
         list-style-type: none;
+        -webkit-padding-start: 0;
+
+        li{
+            border-top: solid 1px #ddd;
+            padding: 8px;
+
+            &:hover{
+                background-color: #f5f5f5;
+            }
+        }
     }
 
     img {
@@ -157,5 +167,14 @@
         border-color: #dddddd;
         border-style: solid;
         border-width: 1px;
+        background-color: #f1f2f2;
+
+        i{
+            font-size: 18px;
+            line-height: 48px;
+            display: block;
+            text-align: center;
+            opacity: 0.3;
+        }
     }
 }
