Show different messages on empty favorites list
My profile page says "You" while other people's pages say "This person"

--- a/opentreemap/treemap/templates/treemap/user.html
+++ b/opentreemap/treemap/templates/treemap/user.html
@@ -116,7 +116,11 @@ active
                                 </li>
                             {% endfor %}
                         {% else %}
-                            <h4>{% trans "You have not starred any favorites yet." %}</h4>
+                            {% if its_me %}
+                                <h4>{% trans "You have not starred any favorites yet." %}</h4>
+                            {% else %}
+                                <h4>{% trans "This person has not starred any favorites yet." %}</h4>
+                            {% endif %}
                         {% endif %}
                     </ol>
                 </div>
