Prevent submitting empty comments.
Attempting to post an empty comment would lead to incorrect behaviour
like redirecting to an unstyled page.

This commit fixes the issue by disabling the submit button when the
textbox is empty, and enabling when text has been entered.

Fixes #1596

--- a/opentreemap/treemap/templates/treemap/map_feature_detail.html
+++ b/opentreemap/treemap/templates/treemap/map_feature_detail.html
@@ -240,7 +240,7 @@
     <input type="hidden" name="next" value="{{request.get_full_path}}" />
     <input type="hidden" name="markup" value="5">
     <div class="submit">
-      <input type="submit" name="post" class="submit-post btn btn-primary" value="Post" />
+      <input disabled="disabled" type="submit" name="post" class="submit-post btn btn-primary" value="Post" />
     </div>
   </form>
 </script>
