--- a/opentreemap/treemap/templates/instance_base.html
+++ b/opentreemap/treemap/templates/instance_base.html
@@ -2,6 +2,7 @@
 {% load i18n %}
 {% load instance_config %}
 {% load form_extras %}
+{% load exports %}
 
 {% block application_css %}
 {% if request.instance.scss_variables %}
@@ -132,7 +133,7 @@
       <div style="display: inline;" id="tree-and-planting-site-counts">
       </div>
       {% block subhead_exports %}
-        {% if request.instance|feature_enabled:'exports' %}
+        {% if request.instance|export_enabled_for:request.user %}
         <a href="javascript:;" class="btn btn-primary btn-xs exportBtn"
            data-export-start-url="{% url 'begin_export' instance_url_name=request.instance.url_name model='tree' %}">
           <i class="icon-export"></i> {% trans "Export Search Results" %}
