--- a/opentreemap/treemap/templates/treemap/plot_detail.html
+++ b/opentreemap/treemap/templates/treemap/plot_detail.html
@@ -137,7 +137,7 @@
           inlineEditForm: mapFeatureOptions.inlineEditForm,
           form: mapFeature.inlineEditForm,
           typeaheads: [{
-              name: "species-edit",
+              name: "species",
               url: config.instance.url + "species/",
               input: "#plot-species-typeahead",
               template: "#species-element-template",
