--- a/opentreemap/treemap/templates/treemap/partials/search_species.html
+++ b/opentreemap/treemap/templates/treemap/partials/search_species.html
@@ -1,11 +1,17 @@
 {% load i18n %}
+{% load species_thumbprint %}
 
 <!--Species Search-->
 <div class="search-block visible-md visible-lg">
   <label>{% trans "Search by Species" %}</label>
   <div class="search-field-group">
     <a class="typeahead-toggle" id="species-toggle"><i class="icon-menu"></i></a>
-    <input type="text" data-class="search" id="species-typeahead" class="form-control" placeholder="Common or Scientific Name"/>
+    <input type="text"
+           data-class="search"
+           id="species-typeahead"
+           class="form-control"
+           placeholder="Common or Scientific Name"
+           data-thumbprint="{{ request|species_thumbprint }}"/>
     <input name="species.id" data-search-type="IS" type="hidden" id="search-species" />
   </div>
 </div>
