Fix styling error causing header to not appear on smaller screen sizes.
Connects to #2039

--- a/opentreemap/treemap/templates/base.html
+++ b/opentreemap/treemap/templates/base.html
@@ -47,7 +47,7 @@
       {% block topnav %}
       <!-- Top Nav -->
       <div class="navbar navbar-inverse navbar-fixed-top">
-        <div class="collapse navbar-collapse" id="otm-navbar-collapse">
+        <div class="navbar-collapse" id="otm-navbar-collapse">
           <ul class="pull-left nav navbar-nav navbar-left">
             {# Since the active style changes on a page-by-page basis we use nested blocks below. These nested blocks can then be overriden to change which tab is active. #}
             {% block instancetopnav %}
