Show layer for polygonal map features
Show layer only if
* instance has polygonal map feature types, and
* zoom is 15 or higher

And while we're at it, likewise show boundary layer only if
* instance has boundaries, and
* zoom is 15 or higher

Communicate `has_polygons` and `has_boundaries` via data attributes on the map DOM element, for both the main map and detail map.

To test:
0) Get OpenTreeMap/otm-tiler#63 and restart the tiler
1) Add the `Bioswale` map feature type to an instance
2) Create a bioswale -- its polygon should be displayed
3) Open network tab and zoom out to level 14. There should be no tile requests for the boundary or polygonal map feature
layers.
4) Go to an instance that doesn't have the `Bioswale` map feature type.
5) Zoom in to level 15. There should be no tile requests for the polygonal map feature layer.

Connects #2037
Connects #2061

Requires OpenTreeMap/otm-tiler#63

--- a/opentreemap/treemap/templates/treemap/map.html
+++ b/opentreemap/treemap/templates/treemap/map.html
@@ -24,7 +24,9 @@
 <div class="content map">
   <div id="streetview" style="display: none">
   </div>
-  <div id="map" class="map">
+  <div id="map" class="map"
+       data-has-boundaries="{{ has_boundaries }}"
+       data-has-polygons="{{ has_polygons }}">
   </div>
   <div class="sidebar">
     <div id="sidebar-browse-trees">
