--- a/opentreemap/treemap/css/sass/partials/_subheader.scss
+++ b/opentreemap/treemap/css/sass/partials/_subheader.scss
@@ -356,7 +356,12 @@
                 width: inherit;
                 padding: 0px;
             }
+
+            label{
+                float: right;
+            }
         }
+
         .exportBtn {
             margin-left: 10px;
             margin-top: -2px;
