Add resources support for displaying stewardship
connects #2098 on github

--- a/opentreemap/treemap/templates/treemap/partials/collectionudf.html
+++ b/opentreemap/treemap/templates/treemap/partials/collectionudf.html
@@ -6,7 +6,11 @@
 {% with perm_level=last_effective_instance_user|udf_write_level:udf %}
 {% if perm_level|is_read_or_write %}
 <div>
-  <h4>{{ udf.model_type|display_name }} {{ udf.name }}</h4>
+  {% if title_prefix %}
+  <h4>{{ title_prefix }} {{ udf.name }}</h4>
+  {% else %}
+  <h4>{{ udf.name }}</h4>
+  {% endif %}
   <table class="table table-hover"
          {% if perm_level == "write" %}
          data-udf-id="{{ udf.pk|unlocalize }}"
